# doab-check

./: .gitignore  Pipfile  README.md  history.md  manage.py  setup.cfg
doab_check/: admin.py  asgi.py  check.py  doab_oai.py  doab_utils.py  models.py  settings.py  test.xml  tests.py  urls.py  views.py  wsgi.py
doab_check/fixtures/: testdata.json
doab_check/management/commands/: backfill_doab.py  check_items.py  check_some_links.py  check_url.py  dump_checks.py  kill_dead_links.py  load_doab.py
doab_check/migrations/: 0001_initial.py  0002_alter_check_content_type.py  0002_link_provider_alter_linkrel_role_and_more.py  0003_item_publisher_name.py  0003_link_recent_check.py  0004_auto_20230330_1419.py  0004_auto_20230427_1818.py  0005_alter_check_return_code.py  0005_alter_item_publisher_name_alter_item_title.py  0006_item_status.py
doab_check/settings/: __init__.py  common.py
doab_check/templates/: api.html  basestyle.html  fixing.html  header.html  index.html  link.html  problems.html  probpubs.html  provider.html  providers.html  publisher.html  publisherlinks.html  publishers.html
scripts/: doab-backfill.sh  doab_check.sh  doab_load.sh  dump_checks.sh
